Fixed wrong color of dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ Dropdown Menu
 	display: none;
 	position: absolute;
 	margin-top: 0;
-	background-color: #60776f;
+	background-color: #20372f;
 	min-width: 100%;
 	box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.5);
 }
